# Backend/swagger_output.json
@@ -246,6 +246,19 @@
           }
         }
       }
+    },
+    "/api/openweathermap": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
